+ Added Prototype UI window library which will eventually replace window.js
  and improves stability for atkDialog. [Peter]
+ Added atkthemeicon Smarty plug-in for including theme icons inside
  templates. [Peter]
+ Added fetchByPk to atkNode. [Michael]
+ Added atknavigator and atknavigatorinfo Smarty block plug-ins, which make it
  to create page navigation bars or show navigation info. [Peter]
+ Added UI resource for Smarty which makes it easier to include templates
  somehwere inside your ATK root e.g. {include file="ui:modules/..."} [Peter]
* In formfocus.js, the inital text selection is cleared to prevent data loss
  on a key event. [Patrick]
* Oci8 and Oci9 drivers now support substring conditions for subqueries.
  [Peter]
* Improved early state detection of sections to get a smooth display when
  showing a tab with opened/closed sections. [Peter]
* partial_url now supports a $sessionStatus parameter so that partial URLs
  can also be executed in a separate session stack using SESSION_NEW [Peter]
* Dialogs are now executed in a separate session stack. [Peter]
* Improved order of items in partial page output; stylesheets are now
  loaded first, then script files, then the content (including possible
  script tags) and last script code and load scripts. [Peter]
* atkEmailAttribute now also allows '+' chars into the part before the @.
  [Tjeerd]
* Added check for edit privilege when NF_EDITAFTERADD is set [Yannick]
* Fixed a small bug with the fuzzy filters. [Erik]
* Made the gathering of selected records in extendableshuttle a bit more
  efficient [Erik]
* modified the deleteAll method to use the query builder, this fixes a issue
  which needed escaping of table names. Also added a dropAll method to the
  mysqldb that does table escaping. [Erik]
* Added empty string check at the atkMlSplitter for primary key values that
  cannot be NULL and made the language key always uppercase [Yannick]
* Upgraded Prototype to 1.6.0.2, Scriptaculous to 1.8.1 and Window.js to